# secrets-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/tools/: aws.rs  config.rs  crypto.rs  diff.rs  error.rs  mod.rs
tests/: cli.rs
