[package]
name = "tc-secrets"
version = "0.1.2"
edition = "2024"
authors = ["teamclouday <teamclouday@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "CLI tool to encode/decode secrets files"
homepage = "https://github.com/teamclouday/secrets-cli"
repository = "https://github.com/teamclouday/secrets-cli"
keywords = ["secrets", "cli", "encryption"]
categories = ["command-line-utilities"]

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.38", features = ["derive"] }
magic-crypt = "4.0.1"
serde_json = "1.0.140"

[dev-dependencies]
assert_cmd = "2.0.17"
