[package]
name = "tc-secrets"
version = "0.1.3"
edition = "2024"
authors = ["teamclouday <teamclouday@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "CLI tool to encode/decode secrets files"
homepage = "https://github.com/teamclouday/secrets-cli"
repository = "https://github.com/teamclouday/secrets-cli"
keywords = ["secrets", "cli", "encryption"]
categories = ["command-line-utilities"]

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.38", features = ["derive"] }
console = "0.15.11"
magic-crypt = "4.0.1"
similar = { version = "2.7.0", features = ["inline"] }

[dev-dependencies]
assert_cmd = "2.0.17"
