[package]
name = "tc-secrets"
version = "0.2.0"
edition = "2024"
authors = ["teamclouday <teamclouday@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "CLI tool to synchronize .env secrets with AWS Secrets Manager with encryption"
homepage = "https://github.com/teamclouday/secrets-cli"
repository = "https://github.com/teamclouday/secrets-cli"
keywords = ["env", "cli", "aws", "secretsmanager"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }

clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

console = "0.15.11"
dialoguer = "0.11.0"
similar = { version = "2.7.0", features = ["inline"] }

magic-crypt = "4.0.1"

aws-config = "1.8.1"
aws-sdk-sts = "1.76.0"
aws-sdk-secretsmanager = "1.78.0"

[dev-dependencies]
assert_cmd = "2.0.17"
